Changes made in xhtml files
Changes made in xhtml files like title and header changes.

--- a/WebContent/success.xhtml
+++ b/WebContent/success.xhtml
@@ -18,7 +18,7 @@ div.button {
 </h:head>
 
 <h:body>
-        USERs:
+        USER Details:
         <h:form>
 		<div class="button">
 			<p:button href="home.xhtml" value="Add User" styleClass="button" />
