--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -6,7 +6,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
-	<title>Insert title here</title>
+	<title>Add User</title>
 </h:head>
 <h:body>
 	<h:form>
