--- a/WebContent/success.xhtml
+++ b/WebContent/success.xhtml
@@ -13,6 +13,7 @@ div.button {
 	width: 50%;
 	margin-bottom: 0.5%;
 	margin-left: 44%;
+	color:red !important;
 }
 </style>
 </h:head>
@@ -21,7 +22,7 @@ div.button {
         USER Details:
         <h:form>
 		<div class="button">
-			<p:button href="home.xhtml" value="Add User" styleClass="button" />
+			<p:button href="home.xhtml" value="Add User" style="color: red;" />
 		</div>
 		<div>
 			<p:dataTable id="employees" var="employee"
